--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,5 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue"
-  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'SF Pro Display', sans-serif;
 }
