--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,3 +125,17 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.custom-bullet {
+  width: 11px !important;
+  height: 11px !important;
+  background: #D9D9D9 !important;
+  opacity: 1 !important;
+}
+
+.custom-bullet-active {
+  width: 11px !important;
+  height: 11px !important;
+  background: #FDC0C5 !important;
+  opacity: 1 !important;
+}
