--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'SF Pro Display', sans-serif;
+  scroll-behavior: auto !important;
 }
 
 @theme inline {
@@ -142,9 +143,13 @@ body {
 
 /* Add this in your global CSS (e.g. globals.css) */
 .scrollbar-hide {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none;    /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
+
 .scrollbar-hide::-webkit-scrollbar {
-  display: none;            /* Chrome, Safari, Opera */
+  display: none;
+  /* Chrome, Safari, Opera */
 }
