--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,9 @@ body {
   font-family: 'SF Pro Display', sans-serif;
   scroll-behavior: auto !important;
 }
+
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 @theme inline {
@@ -155,4 +156,22 @@ body {
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera */
+}
+
+/* CSS for masonry-like layout */
+.masonry-grid {
+  display: flex;
+  width: 100%;
+  margin-left: -16px;
+  /* gutter size offset */
+}
+
+.masonry-grid-column {
+  padding-left: 16px;
+  /* gutter size */
+  background-clip: padding-box;
+}
+
+.masonry-grid-item {
+  margin-bottom: 16px;
 }
